<resources>
    <string name="app_name">Oily Features</string>

    <string name="action_settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="settings_invalid_address">Address required</string>
    <string name="settings_invalid_port">Positive number or empty value required</string>

    <string name="main_fragment_label">Main</string>
    <string name="gallery_fragment_label">Gallery</string>
    <string name="record_fragment_label">Record Video</string>

    <string name="binding_failed">Binding failed.\n\n%1$s</string>
    <string name="hello_main_fragment">Please choose the action you want to perform</string>
    <string name="record_failed">Recording failed\n\n%1$s</string>
    <string name="record_in_progress">Recording in progress</string>
    <string name="record_success">Video saved to the gallery\nFile: %1$s.mp4</string>

    <string name="open_settings">Open settings</string>
    <string name="permissions_needed_title">Permissions needed</string>
    <string name="permissions_needed_message">Camera permission needed for recording videos</string>
    <string name="permissions_not_granted">Permissions not granted by the user</string>

    <string name="go_to_gallery">Go to gallery</string>
    <string name="go_to_record">Record a new video</string>

    <string name="delete_button_description">Delete file</string>
    <string name="record_start_button_description">Start video record</string>
    <string name="record_stop_button_description">Stop video record</string>
    <string name="send_button_description">Send video to processing</string>
    <string name="thumbnail_view_description">Thumbnail view</string>

    <string name="duration_format">Duration: %d:%02d</string>
    <string name="size_format">Size: %s</string>

    <string name="video_deleted_successfully">Video deleted successfully</string>
    <string name="action_canceled">Action canceled</string>

    <string name="file_uploaded_successfully">File uploaded successfully</string>
    <string name="file_uploading_error">File uploading failed (%1$s)</string>
    <string name="file_uploading_message">Uploading file…</string>
    <string name="not_able_to_get_mime_type">Not able to get mime type</string>

    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="protocol">Protocol</string>
    <string name="server">Server</string>

    <string-array name="protocol_items">
        <item>HTTP</item>
        <item>HTTPS</item>
    </string-array>

</resources>