<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.prograf.oilyfeatures.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_RecordFragment"
            app:destination="@id/RecordFragment" />
        <action
            android:id="@+id/action_MainFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/RecordFragment"
        android:name="com.prograf.oilyfeatures.RecordFragment"
        android:label="@string/record_fragment_label"
        tools:layout="@layout/fragment_record">
    </fragment>
    <fragment
        android:id="@+id/GalleryFragment"
        android:name="com.prograf.oilyfeatures.GalleryFragment"
        android:label="@string/gallery_fragment_label"
        tools:layout="@layout/fragment_gallery">
    </fragment>
</navigation>